[package]
name = "garrison"
version = "0.7.3"
edition = "2021"
rust-version = "1.85"  # MSRV: 部分 deps（如 inventory 0.3）要求 edition2024 → Rust 1.85+
authors = ["Kirky.X"]
license = "Apache-2.0"
description = "Garrison - 面向 Rust 生态的一站式身份认证鉴权框架"
homepage = "https://github.com/Kirky-X/garrison"
repository = "https://github.com/Kirky-X/garrison"
documentation = "https://docs.rs/garrison"
readme = "README.md"
keywords = ["auth", "authentication", "authorization", "jwt", "rbac"]
categories = ["authentication", "web-programming"]

[workspace]
members = [".", "examples", "garrison-macros"]
resolver = "2"

[lib]
name = "garrison"
path = "src/lib.rs"

[dependencies]
# === Required dependencies ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confers = "0.4"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
once_cell = "1.19"
inventory = "0.3"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = { version = "6", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
http = "1"
unicode-normalization = "0.1"

# === Optional dependencies (feature-gated) ===
axum = { version = "0.8", optional = true, default-features = false, features = ["json"] }
axum-server = { version = "0.8", optional = true, default-features = false }
actix-web = { version = "4", optional = true, default-features = false }
warp = { version = "0.4", optional = true, default-features = false }
jsonwebtoken = { version = "10", optional = true, default-features = false, features = ["rust_crypto"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json", "rustls", "rustls-native-certs", "form"] }
totp-rs = { version = "5", optional = true }
sha2 = { version = "0.11", optional = true }
hmac = { version = "0.13", optional = true }
subtle = { version = "2.6", optional = true, default-features = false, features = ["std"] }
base64 = { version = "0.22", optional = true }
md5 = { version = "0.7", optional = true }
base32 = { version = "0.5", optional = true }
argon2 = { version = "0.5", optional = true }
bcrypt = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }
zeroize = { version = "1", optional = true, default-features = false, features = ["derive", "serde"] }
regex = { version = "1", optional = true, default-features = false }
oxcache = { version = "0.3", default-features = false }
# dbnexus 0.4+ 在 src/lib.rs#L51 设置 compile_error!，强制至少启用一个数据库驱动 feature
# （sqlite/postgres/mysql/duckdb/ladybug/neo4j）。因此 dbnexus 必须 optional，由 db-base feature
# 透传 dbnexus/<driver> 启用对应驱动。这并非手写绕过，而是 dbnexus 0.4 API 设计的硬性约束。
dbnexus = { version = "0.4", optional = true, default-features = false }
sea-orm = { version = "2.0.0-rc.43", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"], optional = true }
prometheus = { version = "0.14", optional = true, default-features = false }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["fmt", "json", "env-filter"] }
opentelemetry = { version = "0.32", optional = true, default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32", optional = true, default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
tonic = { version = "0.14", optional = true, default-features = false, features = ["transport"] }
tonic-health = { version = "0.14", optional = true, default-features = false }
fluent = { version = "0.17", default-features = false }
unic-langid = { version = "0.9", default-features = false }
miette = { version = "7", optional = true, default-features = false }
garrison-macros = { path = "garrison-macros", version = "0.7", optional = true }
# rsa 0.9 内部依赖 sha2 0.10，与项目 sha2 0.11 不兼容，故用 `rsa::pkcs1v15::SigningKey` + `rsa::sha2::Sha256`（sha2 0.10 re-export）
rsa = { version = "0.9", optional = true, default-features = false, features = ["sha2", "pem"] }
unicode-security = { version = "0.1", optional = true, default-features = false }
maxminddb = { version = "0.29", optional = true, default-features = false }
quick-xml = { version = "0.41", optional = true, default-features = false, features = ["serialize"] }
# 版本 ~1.2 与 oxcache 0.3 间接依赖的 redis 保持一致
redis = { version = "1.2", optional = true, default-features = false, features = ["aio", "tokio-comp", "connection-manager", "script"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
inklog = { version = "0.1", default-features = false }
limiteron = { version = "0.2", default-features = false, features = ["distributed"] }
# sdforge 运行时：`features = ["http"]` 让 `sdforge::http::build()` / `RouteRegistration`
# 始终可用（`server_impl.rs` 无条件调用 `sdforge::http::build()`）。
# 但 `#[forge]` 宏生成的 `inventory::submit!` 被 `#[cfg(feature = "http")]` 保护，
# 此 cfg 在 **garrison 上下文** 求值——garrison 必须暴露同名 `http` feature 才能让
# 路由注册代码编译进来。详见 `[features]` 段的 `http` 桥接 feature。
sdforge = { version = "0.4", default-features = false, features = ["http"] }
trait-kit = { version = "0.3", default-features = false, features = ["async"] }
cedar-policy = { version = "4.11", optional = true, default-features = false }
icu_plurals = { version = "2.2", optional = true, default-features = false, features = ["compiled_data"] }
icu_datetime = { version = "2.2", optional = true, default-features = false, features = ["compiled_data"] }
icu_decimal = { version = "2.2", optional = true, default-features = false, features = ["compiled_data", "alloc"] }
icu_locale_core = { version = "2.2", optional = true, default-features = false }
icu_calendar = { version = "2.2", optional = true, default-features = false, features = ["compiled_data"] }
icu_time = { version = "2.2", optional = true, default-features = false, features = ["compiled_data"] }
fixed_decimal = { version = "0.7", optional = true, default-features = false }
percent-encoding = { version = "2.3", optional = true, default-features = false }
hkdf = { version = "0.13", optional = true, default-features = false }
# 嵌入式迁移文件（embedded-migrations feature）：编译时用 include_dir! 嵌入 postgres 迁移 SQL，
# 供 crates.io 消费者在运行时无需访问 garrison 源码目录即可执行迁移。
include_dir = { version = "0.7", optional = true }
tempfile = { version = "3.27", optional = true }

[dev-dependencies]
toml = "1.0"
tokio-test = "0.4"
mockall = "0.15"
# tempfile 同时存在于 [dependencies]（optional，由 embedded-migrations feature 启用，供生产代码使用）
# 与 [dev-dependencies]（测试代码无条件可用，如 db-sqlite 下的 tempdir 测试）。
# Cargo 允许同名 crate 同时出现在两处，dev-dep 在测试构建时优先生效。
tempfile = "3.27"
# serial_test 用于串行化依赖 std::env::set_var 的测试，避免多线程并发污染环境变量
serial_test = "3"
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
warp = { version = "0.4", default-features = false, features = ["test"] }
rsa = "0.9"
rand = "0.8"
testcontainers = "0.27"
criterion = { version = "0.5", features = ["html_reports"] }
# rcgen 用于 BackendRemote mTLS 测试中生成自签名证书
rcgen = "0.14"
# 集成测试需要直接发送 HTTP 请求到服务器，因此无条件引入 reqwest
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs"] }

[features]
default = ["backend-embedded"]

# === 核心模块（always on，无开关） ===
# core / stp / annotation / router / dao / strategy / session / config / context / json / exception / manager / plugin
# 这些模块无 feature flag，总是编译

# === 核心扩展：决策溯源 ===
decision-trace = []

# === 核心扩展：权限注册表 ===
permission-registry = []

# === 核心扩展：请求对象式授权 API ===
authorize-api = ["decision-trace"]

# === 核心扩展：显式 Manager API ===
manager-explicit = ["authorize-api"]

# === 核心扩展：多租户逻辑隔离 ===
# Repository SQL 过滤不门控此 feature（始终生效，安全优先）。
tenant-isolation = []

# === 核心扩展：forbid 优先语义（safe-defaults） ===
safe-defaults = []

# === 聚合特性：等价于原 default，方便快速启用全部默认后端 ===
# DEPRECATED：与 `development` 聚合特性完全重复（均 = `["cache-memory", "db-sqlite", "web-axum"]`）。
# 0.8.0 将删除，请改用 `development`。
all-defaults = ["cache-memory", "db-sqlite", "web-axum"]

# === 缓存后端（通过 oxcache） ===
cache-memory = ["oxcache/memory", "oxcache/serialization"]
cache-redis = ["cache-memory", "oxcache/redis", "dep:redis"]

# === 数据库后端（通过 dbnexus 0.4） ===
# dbnexus 禁止 embedded 与 server-side 混用。
db-base = [
    "dbnexus",
    "dbnexus/runtime-tokio-rustls",
    "dbnexus/permission",
    "dbnexus/sql-parser",
    "dbnexus/macros",
    "dbnexus/config-env",
    "dbnexus/with-time",
    "dbnexus/auto-migrate",
    "sea-orm",
]
# db-sqlite 启用 sqlite embedded 驱动
db-sqlite = ["db-base", "dbnexus/sqlite"]
db-postgres = ["db-base", "dbnexus/postgres", "embedded-migrations"]
db-mysql = ["db-base", "dbnexus/mysql"]

# 嵌入式迁移文件：编译时用 include_dir! 嵌入 postgres 迁移 SQL，
# 供 crates.io 消费者在运行时无需访问 garrison 源码目录即可执行迁移。
embedded-migrations = ["dep:include_dir", "dep:tempfile"]

# === 协议层插件 ===
protocol-oauth2 = ["dep:reqwest", "dep:sha2", "dep:base64", "dep:percent-encoding"]
protocol-sso = ["dep:reqwest", "dep:quick-xml", "dep:sha2", "hmac", "dep:base64", "dep:percent-encoding"]
protocol-jwt = ["jsonwebtoken", "dep:sha2"]
protocol-sign = ["dep:sha2", "hmac", "dep:base64", "dep:hkdf"]
# protocol-apikey：API Key 生成/校验/吊销/轮换。
# dep:sha2 + dep:subtle：secret 以 sha256 哈希存储（CWE-916 修复）+ subtle 常量时间比较。
# dao-key-index：启用 GarrisonDaoOxcache::keys() 生产实现，使 list_by_namespace 可用。
protocol-apikey = ["dep:sha2", "dep:subtle", "dao-key-index"]
protocol-temp = []
# protocol-zeroize：协议层密钥零化（Drop 时清零 secret 字段，防止内存残留）
protocol-zeroize = ["zeroize"]
# OIDC 扩展（id_token 签发/验证 + discovery endpoint），依赖 protocol-jwt + protocol-oauth2
protocol-oidc = ["protocol-jwt", "protocol-oauth2", "dep:subtle"]
# OAuth2 Scope Handler 注册表（ScopeHandler trait + ScopeRegistry），依赖 protocol-oauth2
oauth2-scope-handler = ["protocol-oauth2"]
# SSO Server 独立抽象（SsoServer trait + CenterIdConverter + SsoChannel），依赖 protocol-sso
protocol-sso-server = ["protocol-sso"]
# secure-saml：启用 XmlSecSamlProvider（vuln-0001 修复），使用 rsa crate 验证 SAML Assertion XML 签名
secure-saml = ["protocol-sso", "rsa", "dep:base64"]

# === 安全模块 ===
secure-totp = ["totp-rs", "dep:base32"]
secure-sign = ["dep:sha2", "hmac", "dep:base64", "md5", "dep:subtle"]
secure-httpbasic = ["dep:base64"]
secure-httpdigest = ["dep:sha2", "dep:base64", "md5", "dep:subtle"]
# Unicode 同形异义字检测
secure-confusable = ["dep:unicode-security"]
# 依赖 regex：Custom mask 真实脱敏（vuln-0010 D6 修复，原 placeholder 实现静默泄露敏感数据）
secure-masking = ["dep:regex"]
secure-xss = []
secure-sanitize = []
sms-rate-limit = ["dep:rand"]

# === 账号安全引擎 ===
account-credential = ["dep:argon2", "dep:bcrypt", "dep:rand", "dep:sha2", "dep:base32"]
account-credential-zeroize = ["account-credential", "zeroize"]
account-policy = ["account-credential", "dep:regex"]
account-lockout = ["firewall"]
account-authflow = ["account-credential", "account-policy", "account-lockout"]

# === Web 框架适配 ===
web-axum = ["axum", "axum/tokio", "axum/http1"]
web-actix = ["actix-web"]
web-warp = ["warp"]

# === HTTPS/TLS 终止（axum-server rustls） ===
# 依赖 auth-server（server 模块门控）
tls = ["dep:axum-server", "axum-server/tls-rustls", "auth-server"]

# === Web 安全中间件 ===
web-waf = ["web-axum"]
web-cors = ["web-axum"]
web-csrf = ["web-axum", "dep:rand", "dep:base64", "dep:subtle"]

# === 过程宏注解（#[check_login]/#[check_permission]/#[check_role]） ===
# 依赖 web-axum（宏生成的 wrapper 返回 axum::response::Response）
annotation-macros = ["dep:garrison-macros", "web-axum"]

# === 扩展 ===
alone-cache = []
parameter-query = []

# === 审计日志 ===
audit-log = ["listener", "dep:sha2", "hmac", "secure-masking", "secure-ct-eq"]

# === 常量时间比较原语（CWE-208 防御）===
# 提供 `secure::ct_eq::constant_time_eq` 公共函数，基于 subtle::ConstantTimeEq。
# 所有需要常量时间比较的 feature（如 audit-log / oauth2-server）应依赖此 feature，
# 避免在各模块重复实现（规则 7 先读再写、规则 5 简洁优先）。
secure-ct-eq = ["dep:subtle"]

# === 安全防护套件 ===
# v0.7.2：统一使用 limiteron GarrisonDaoDistributedLimiter，禁止手写限流实现。
firewall = []
firewall-bruteforce = ["firewall"]
firewall-ratelimit = ["firewall", "dep:rand"]
# 启用后可在配置中选择 Memory/Redis 限流后端（RateLimitBackend enum）
rate-limit-redis = ["firewall-ratelimit", "cache-redis"]
firewall-anomalous = ["firewall"]
firewall-geoip = ["firewall"]
firewall-ddos = ["firewall"]
firewall-waf = ["firewall", "web-axum"]
firewall-maxminddb = ["dep:maxminddb", "firewall-geoip", "firewall-anomalous"]
anomalous-detector-dual = ["firewall", "listener", "dao-key-index"]
# dao-key-index：内部 feature，为 GarrisonDaoOxcache 维护 key 索引以提供 keys() 生产实现
# （oxcache 0.3.3 无原生 iter/keys API）。由 protocol-apikey / anomalous-detector-dual 传递启用。
dao-key-index = []

# === 安全告警系统 ===
security-alert = []
device-binding = ["security-alert"]

# === 二级认证瞬态标记 ===
safe-auth = []

# === 动态活跃超时 ===
dynamic-active-timeout = []

# === 三层缓存架构 ===
three-tier-cache = []

# === login_token_map 持久化 ===
login-token-map-persistence = []

# === 匿名 Session ===
anonymous-session = []

# === 会话搜索 ===
session-search = []

# === 社交登录 ===
social-wechat = ["protocol-oauth2"]
# 启用 rsa（RSA2 签名 + PEM 解析）+ base64（签名值编码）
social-alipay = ["protocol-oauth2", "rsa", "dep:base64"]

# === Keycloak OIDC RP ===
keycloak-oidc = ["protocol-oidc"]

# === v0.7.0 微服务架构 ===
backend-embedded = []
backend-remote = ["dep:reqwest"]
# secure-simple-token：为 SimpleTokenStyle 启用 HMAC-SHA256 签名（A11 安全修复）
# 格式：<login_id>-<uuid>.<hmac_sha256(secret, login_id|uuid)>
# 未启用此 feature 时，SimpleTokenStyle::generate 返回 Err（fail-closed，杜绝无签名伪造）
secure-simple-token = ["dep:sha2", "hmac", "dep:subtle"]
# secure-simple-token 确保 SimpleTokenStyle 使用 HMAC 签名（A11 CRITICAL 修复）
auth-server = ["web-axum", "backend-embedded", "auth-server-sdforge", "dep:subtle", "secure-simple-token"]
abac = ["dep:cedar-policy", "cache-memory"]
# db-sqlite 下的 RefreshTokenRotation 依赖 protocol::jwt，因此传递启用 protocol-jwt。
oauth2-server = ["protocol-oauth2", "dep:reqwest", "dep:argon2", "dep:rand", "dep:percent-encoding", "protocol-jwt", "secure-ct-eq"]

# === v0.7.0 inklog 结构化审计日志 ===
audit-inklog = []

# === v0.7.0 trait-kit typestate DI 构建 ===
backend-kit = ["backend-embedded"]

# === v0.7.0 sdforge 声明式路由 ===
# `http` feature 是 garrison 与 sdforge 之间的桥接 feature（cfg flag only）：
# `#[forge]` 宏生成的 `inventory::submit!(RouteRegistration::new(...))` 被
# `#[cfg(feature = "http")]` 保护，此 cfg 在 **garrison 上下文** 求值（不是 sdforge）。
# 若 garrison 不暴露 `http` feature，submit 调用会被 cfg 剥离，
# `sdforge::http::build()` 收集不到任何路由 → 所有 POST 请求返回 404。
# 命名约定：必须叫 `http`（sdforge 宏硬编码 `feature = "http"`），不可改名。
# sdforge/http 由依赖声明 `features = ["http"]` 无条件启用，故此 feature 仅作 cfg 开关。
http = []
auth-server-sdforge = ["http"]

# === 可观测性 ===
listener = []
tracing-log = ["tracing/log", "tracing-subscriber"]
metrics-prometheus = ["prometheus", "tracing-subscriber"]
# OpenTelemetry 分布式追踪（OTLP gRPC 导出），独立门控以隔离重依赖
observability-otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-subscriber"]
grpc = ["tonic", "dep:tonic-health"]
# 0.7.x：基础层已无条件编译，此 feature 仅门控 i18n 相关测试代码，不改变运行时行为。
i18n = []
# ICU4X 增强层：复数规则 + 日期/数字本地化（依赖 i18n 基础层）
i18n-icu = [
    "i18n",
    "dep:icu_plurals", "dep:icu_datetime", "dep:icu_decimal",
    "dep:icu_locale_core", "dep:icu_calendar", "dep:icu_time", "dep:fixed_decimal",
]
# 启用后 GarrisonError 实现 miette::Diagnostic trait（保留 thiserror::Error derive）
miette = ["dep:miette"]
garrison-testing = ["authorize-api"]
testing = []

# === 聚合特性 ===
full = [
    "cache-memory", "cache-redis",
    "db-sqlite",
    "protocol-oauth2", "protocol-sso", "protocol-jwt", "protocol-sign", "protocol-apikey", "protocol-temp", "protocol-zeroize",
    "protocol-oidc", "oauth2-scope-handler", "protocol-sso-server", "secure-saml",
    "secure-totp", "secure-sign", "secure-httpbasic", "secure-httpdigest", "secure-masking",
    "secure-xss", "secure-sanitize", "sms-rate-limit",
    "account-credential", "account-credential-zeroize", "account-policy", "account-lockout", "account-authflow",
    "web-axum", "web-actix", "web-warp",
    "web-waf", "web-cors", "web-csrf",
    "alone-cache", "parameter-query",
    "listener", "metrics-prometheus", "observability-otlp", "grpc", "i18n-icu",
    "audit-inklog",
    "annotation-macros",
    "decision-trace", "tenant-isolation", "safe-defaults",
    "firewall", "firewall-bruteforce", "firewall-ratelimit", "firewall-anomalous",
    "firewall-geoip", "firewall-ddos", "firewall-maxminddb", "firewall-waf",
    "rate-limit-redis",
    "anomalous-detector-dual",
    "security-alert",
    "device-binding",
    "safe-auth",
    "dynamic-active-timeout",
    "three-tier-cache",
    "login-token-map-persistence",
    "anonymous-session",
    "session-search",
    "social-wechat", "social-alipay",
    "backend-embedded", "backend-kit", "backend-remote", "auth-server", "auth-server-sdforge", "abac", "oauth2-server",
]

# production 使用 db-postgres（dbnexus 0.3+ 已支持 postgres feature）
production = [
    "cache-redis", "db-postgres", "web-axum",
    "protocol-jwt", "protocol-sign", "secure-sign",
    "listener", "tracing-log", "metrics-prometheus",
    "audit-inklog",
    "tenant-isolation",
    "security-alert", "device-binding",
    "safe-defaults",
    "firewall-waf",
    "three-tier-cache",
    "sms-rate-limit",
    "backend-embedded", "backend-kit", "auth-server", "auth-server-sdforge", "abac",
]

development = [
    "cache-memory", "db-sqlite", "web-axum",
]

# === 示例文件位于独立 workspace member（examples/），详见 examples/Cargo.toml ===

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# === 测试目标 ===
[[test]]
name = "db_mysql_testcontainers"
path = "tests/db_mysql_testcontainers.rs"
required-features = ["db-mysql"]

[[test]]
name = "auth_server_integration"
path = "tests/auth_server_integration.rs"
required-features = ["auth-server"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["full", "testing"]

# === 二进制目标 ===
[[bin]]
name = "auth_server"
path = "src/bin/auth_server.rs"
required-features = ["auth-server"]

# === 基准测试目标 ===
[[bench]]
name = "garrison_benchmark"
path = "benches/garrison_benchmark.rs"
harness = false

# === Lint 配置 ===
# sdforge #[forge] 宏在 garrison 中展开时生成 #[cfg(feature = "mcp")] /
# #[cfg(feature = "cli")] / #[cfg(feature = "openapi")] 等代码，
# garrison 不具备这些 feature，允许 unexpected_cfgs 以避免 check-cfg 警告。
[lints.rust]
unexpected_cfgs = { level = "allow" }
