# Copyright (c) 2026 Kirky.X. All rights reserved.
# See LICENSE for full license text.

[package]
name = "bulwark-macros"
version = "0.5.1"
edition = "2021"
rust-version = "1.85"
description = "Procedural macros for Bulwark auth framework"
license = "Apache-2.0"
repository = "https://github.com/Kirky-X/bulwark"
documentation = "https://docs.rs/bulwark-macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
bulwark = { path = "..", version = "0.7.0", features = ["annotation-macros"] }
axum = { version = "0.8", default-features = false }
