# Copyright (c) 2026 Kirky.X. All rights reserved.
# See LICENSE for full license text.

# Bulwark 官方示例集（workspace member，不发布到 crates.io）
# 每个 bin 演示 Bulwark 的一个特性模块，配套 tests/<name>.rs 独立测试。

[package]
name = "bulwark-examples"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Bulwark 官方示例集（workspace member，不发布到 crates.io）"

[dependencies]
bulwark = { path = "..", default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 直接被 httpdigest_login 使用（计算 HA2/Response 摘要）
md5 = "0.7"
# httpdigest_login 现使用 SHA256 作为默认算法
sha2 = { version = "0.10", default-features = false }
# 直接被 sso_flow 使用（InMemoryDao 内部 Mutex）
parking_lot = "0.12"
# 直接被 custom_plugin / event_listener 使用（inventory::submit! 编译时注册插件/监听器）
inventory = "0.3"
# 直接被 context_request / axum_integration 使用（仅 web-axum feature 启用时编译）
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"], optional = true }
# 直接被 web_actix_example 使用（actix-web 集成，HttpServer 默认支持 HTTP/1.1）
actix-web = { version = "4", default-features = false, optional = true }
# 直接被 web_warp_example 使用（warp 集成，test 供 warp::test 模块）
warp = { version = "0.4", default-features = false, features = ["test"], optional = true }
# 直接被 grpc_interceptor 使用（tonic Interceptor + MetadataMap）
tonic = { version = "0.13", default-features = false, features = ["transport"], optional = true }
# 直接被 cache_redis 使用（RedisBackend L2 后端配置）
oxcache = { version = "0.3", optional = true }
# 直接被 v0_5_0_demo 使用（DbPool 类型签名，与 bulwark 同版本 0.4）
dbnexus = { version = "0.4", default-features = false, optional = true }
# 直接被 oauth2_flow / scope_handler 使用（mock OAuth2 token / refresh 端点）
wiremock = "0.6"
# 直接被 macro_annotations 使用（读取 axum Response body）
http-body-util = "0.1"
# 直接被 observability_setup 使用（内联 JSON 日志初始化，与 bulwark 的 metrics-prometheus feature 门控一致）
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
serial_test = "3"

[features]
default = []

# 聚合特性：启用 bulwark 全部特性 + axum 依赖 + 所有转发特性
# 必须显式列出所有转发特性，否则 tests/<name>.rs 中的 #![cfg(feature = "...")] 不会生效
full = [
    "bulwark/full", "dep:axum",
    "secure-sign", "secure-httpbasic", "secure-httpdigest", "secure-totp",
    "secure-masking", "secure-xss", "secure-sanitize", "secure-confusable",
    "protocol-sign", "protocol-apikey", "protocol-temp",
    "protocol-jwt", "protocol-oauth2", "protocol-sso",
    "protocol-oidc", "oauth2-scope-handler", "protocol-sso-server",
    "alone-cache", "parameter-query",
    "listener", "web-axum", "cache-memory", "db-sqlite",
    "web-actix", "web-warp", "grpc", "i18n",
    "metrics-prometheus", "observability-otlp", "cache-redis",
    "annotation-macros", "account-credential",
    "tenant-isolation", "audit-log", "decision-trace", "keycloak-oidc",
    "social-wechat",
    "abac", "backend-embedded", "backend-remote", "auth-server",
]

# 单特性转发到 bulwark（保持与 bulwark feature 名一致）
secure-sign = ["bulwark/secure-sign"]
account-credential = ["bulwark/account-credential"]
secure-httpbasic = ["bulwark/secure-httpbasic"]
secure-httpdigest = ["bulwark/secure-httpdigest"]
secure-totp = ["bulwark/secure-totp"]
protocol-sign = ["bulwark/protocol-sign"]
protocol-apikey = ["bulwark/protocol-apikey"]
protocol-temp = ["bulwark/protocol-temp"]
protocol-jwt = ["bulwark/protocol-jwt"]
protocol-oauth2 = ["bulwark/protocol-oauth2"]
protocol-sso = ["bulwark/protocol-sso"]
listener = ["bulwark/listener"]
web-axum = ["bulwark/web-axum", "dep:axum"]
cache-memory = ["bulwark/cache-memory"]
db-sqlite = ["bulwark/db-sqlite", "dep:dbnexus", "dbnexus/sqlite"]
protocol-oidc = ["bulwark/protocol-oidc"]
oauth2-scope-handler = ["bulwark/oauth2-scope-handler"]
protocol-sso-server = ["bulwark/protocol-sso-server"]
alone-cache = ["bulwark/alone-cache"]
parameter-query = ["bulwark/parameter-query"]

# 0.4.0 新增框架集成 / 可观测性 / 缓存特性
web-actix = ["bulwark/web-actix", "dep:actix-web"]
web-warp = ["bulwark/web-warp", "dep:warp"]
grpc = ["bulwark/grpc", "dep:tonic"]
i18n = ["bulwark/i18n"]
metrics-prometheus = ["bulwark/metrics-prometheus", "dep:tracing-subscriber"]
observability-otlp = ["bulwark/observability-otlp", "dep:tracing-subscriber"]
cache-redis = ["bulwark/cache-redis", "dep:oxcache", "oxcache/redis"]

# 0.4.2 新增：过程宏注解（#[check_login]/#[check_permission]/#[check_role]）
annotation-macros = ["bulwark/annotation-macros"]

# 0.5.0 新增：多租户隔离 / 审计日志 / 决策溯源 / Keycloak OIDC RP / 微信社交登录
tenant-isolation = ["bulwark/tenant-isolation"]
audit-log = ["bulwark/audit-log"]
decision-trace = ["bulwark/decision-trace"]
keycloak-oidc = ["bulwark/keycloak-oidc"]
social-wechat = ["bulwark/social-wechat"]

# v0.7.0 新增特性转发
abac = ["bulwark/abac"]
backend-embedded = ["bulwark/backend-embedded"]
backend-remote = ["bulwark/backend-remote"]
auth-server = ["bulwark/auth-server", "backend-embedded"]
secure-masking = ["bulwark/secure-masking"]
secure-xss = ["bulwark/secure-xss"]
secure-sanitize = ["bulwark/secure-sanitize"]
secure-confusable = ["bulwark/secure-confusable"]

# ====================================================================
# Feature-gated bins（required-features 防止 feature 关闭时编译失败）
# always-on bins 由 cargo 自动发现 src/bin/*.rs，无需 [[bin]] 段。
# ====================================================================

[[bin]]
name = "sign_utils"
required-features = ["secure-sign"]
path = "src/bin/sign_utils.rs"

[[bin]]
name = "httpbasic_login"
required-features = ["secure-httpbasic"]
path = "src/bin/httpbasic_login.rs"

[[bin]]
name = "httpdigest_login"
required-features = ["secure-httpdigest"]
path = "src/bin/httpdigest_login.rs"

[[bin]]
name = "sign_protocol"
required-features = ["protocol-sign"]
path = "src/bin/sign_protocol.rs"

[[bin]]
name = "apikey_management"
required-features = ["protocol-apikey"]
path = "src/bin/apikey_management.rs"

[[bin]]
name = "temp_credential"
required-features = ["protocol-temp"]
path = "src/bin/temp_credential.rs"

[[bin]]
name = "event_listener"
required-features = ["listener"]
path = "src/bin/event_listener.rs"

[[bin]]
name = "jwt_login"
required-features = ["protocol-jwt"]
path = "src/bin/jwt_login.rs"

[[bin]]
name = "oauth2_flow"
required-features = ["protocol-oauth2"]
path = "src/bin/oauth2_flow.rs"

[[bin]]
name = "sso_flow"
required-features = ["protocol-sso"]
path = "src/bin/sso_flow.rs"

[[bin]]
name = "totp_login"
required-features = ["secure-totp"]
path = "src/bin/totp_login.rs"

[[bin]]
name = "session_management"
required-features = ["cache-memory"]
path = "src/bin/session_management.rs"

[[bin]]
name = "dao_operations"
required-features = ["cache-memory"]
path = "src/bin/dao_operations.rs"

[[bin]]
name = "context_request"
required-features = ["web-axum"]
path = "src/bin/context_request.rs"

[[bin]]
name = "strategy_firewall"
required-features = ["cache-memory", "web-axum"]
path = "src/bin/strategy_firewall.rs"

[[bin]]
name = "manager_lifecycle"
required-features = ["cache-memory", "web-axum"]
path = "src/bin/manager_lifecycle.rs"

[[bin]]
name = "basic_login"
required-features = ["cache-memory", "web-axum"]
path = "src/bin/basic_login.rs"

[[bin]]
name = "axum_integration"
required-features = ["cache-memory", "web-axum"]
path = "src/bin/axum_integration.rs"

[[bin]]
name = "oidc_handler"
required-features = ["protocol-oidc"]
path = "src/bin/oidc_handler.rs"

[[bin]]
name = "scope_handler"
required-features = ["oauth2-scope-handler"]
path = "src/bin/scope_handler.rs"

[[bin]]
name = "sso_server"
required-features = ["protocol-sso-server"]
path = "src/bin/sso_server.rs"

[[bin]]
name = "alone_cache"
required-features = ["alone-cache"]
path = "src/bin/alone_cache.rs"

[[bin]]
name = "parameter_query"
required-features = ["parameter-query"]
path = "src/bin/parameter_query.rs"

[[bin]]
name = "web_actix_example"
required-features = ["web-actix"]
path = "src/bin/web_actix_example.rs"

[[bin]]
name = "web_warp_example"
required-features = ["web-warp"]
path = "src/bin/web_warp_example.rs"

[[bin]]
name = "grpc_interceptor"
required-features = ["grpc"]
path = "src/bin/grpc_interceptor.rs"

[[bin]]
name = "i18n_usage"
required-features = ["i18n"]
path = "src/bin/i18n_usage.rs"

[[bin]]
name = "observability_setup"
required-features = ["metrics-prometheus", "observability-otlp"]
path = "src/bin/observability_setup.rs"

[[bin]]
name = "cache_redis"
required-features = ["cache-redis"]
path = "src/bin/cache_redis.rs"

# ====================================================================
# 0.4.2 新增示例（gap closure）
# ====================================================================

[[bin]]
name = "password_login"
required-features = ["account-credential", "db-sqlite", "cache-memory"]
path = "src/bin/password_login.rs"

[[bin]]
name = "jwt_modes"
required-features = ["protocol-jwt", "cache-memory"]
path = "src/bin/jwt_modes.rs"

[[bin]]
name = "apikey_namespace"
required-features = ["protocol-apikey", "cache-memory"]
path = "src/bin/apikey_namespace.rs"

[[bin]]
name = "oauth2_pkce"
required-features = ["protocol-oauth2"]
path = "src/bin/oauth2_pkce.rs"

[[bin]]
name = "token_introspection"
required-features = ["protocol-oauth2"]
path = "src/bin/token_introspection.rs"

[[bin]]
name = "strategy_registry"
required-features = ["cache-memory"]
path = "src/bin/strategy_registry.rs"

[[bin]]
name = "macro_annotations"
required-features = ["annotation-macros", "cache-memory", "web-axum"]
path = "src/bin/macro_annotations.rs"

# ====================================================================
# 0.5.0 新增示例
# ====================================================================

[[bin]]
name = "v0_5_0_demo"
required-features = [
    "tenant-isolation", "audit-log", "decision-trace",
    "keycloak-oidc", "social-wechat",
    "db-sqlite", "cache-memory",
]
path = "src/bin/v0_5_0_demo.rs"

# ====================================================================
# v0.7.0 新增示例
# ====================================================================

[[bin]]
name = "abac_policy"
required-features = ["abac"]
path = "src/bin/abac_policy.rs"

[[bin]]
name = "backend_remote"
required-features = ["backend-remote"]
path = "src/bin/backend_remote.rs"

[[bin]]
name = "auth_server"
required-features = ["auth-server", "backend-embedded"]
path = "src/bin/auth_server.rs"

[[bin]]
name = "secure_module"
required-features = ["secure-masking", "secure-xss", "secure-sanitize", "secure-confusable"]
path = "src/bin/secure_module.rs"
