# Copyright (c) 2026 Kirky.X. All rights reserved.
# See LICENSE for full license text.

[package]
name = "garrison-macros"
version = "0.5.1"
edition = "2021"
rust-version = "1.85"
description = "Procedural macros for Garrison auth framework"
license = "Apache-2.0"
repository = "https://github.com/Kirky-X/garrison"
documentation = "https://docs.rs/garrison-macros"
publish = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
garrison = { path = "..", version = "0.7.0", features = ["annotation-macros"] }
axum = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
